Downgrade sprng boot version to 3.2.6 to avoid issue from hibernate https://github.com/spring-projects/spring-data-jpa/issues/3473